# volleyball_analytics

./: .gitignore  .gitmodules  .pylintrc  Makefile  README.md  data.yaml  download.py  inference-seg.py  main.py  package-lock.json  package.json  players-tracking.py  pyproject.toml  requirements.txt  requirements.yml  test-codes.py  test-norfair.py  to_bboxes.ipynb  tracknet_labeler.py  train-bbox.py  train-seg.py
.github/workflows/: flake-8.yml  pylint.yml  python-app.yml
analytics/kpi/: spike.py
api/: data_classes.py  database.py  db_seed.py  enums.py  main.py  models.py  models.txt  rest.py  schemas.py
api/tests/: test_api.py  test_nation.py  test_rally.py  test_schemas.py
assets/wiki/action_detection/version-1/: args.yaml
assets/wiki/gamestate_classification/3-states/: test_results.json  trainer_state.json
ball_data/: classes.json
conf/: court.json  ml_models.yaml  sample.env  setup.yaml
data/processed/: data-segment.yaml  vb_actions_5.yaml  vb_actions_6.yaml
data/raw/ball/: annotations.json
data/raw/ball/images/: images.sa
data/raw/ball_data/: annotations.json
input/ball_data/: annotations.json  config.json
input/videos/train/annotations/: 9.xml
ml/vb_action_detection/: inference.py  pretrained.py
my-react-app/: package-lock.json  package.json
my-react-app/src/: App.css  App.jsx  FileForm.jsx
notebooks/: CVAT2yolo_conversion.ipynb  Untitled.ipynb  a.txt  automated_cvat_annotation.ipynb  check_yolo_annotations.ipynb  cvat2yolo.ipynb  cvat_conversion.ipynb  generate_data_video_classification.ipynb  rename_screenshots.ipynb  setup.ipynb  super_annotate2bboxes.ipynb  utils.py  yolo_combine_data.ipynb
notebooks/data_conversion/: check_yolo_annotations.ipynb  cvat_conversion.ipynb  yolo_combine_data.ipynb
notebooks/utility/: automated_cvat_annotation.ipynb  check_court_refrence_points.ipynb  draw_court_keypoints.ipynb
scripts/: README.md  augment.py  bash  generate_play_noplay.py  generate_triple_labels.py  ml_assisted_annotation.py  split_train_test.py  yolo_split_train_test.py
scripts/etc/: dist_between_pt_and_polygon.py  find_contours.py
scripts/gui/: dragable_circle.py  image_canvas.py
scripts/install_detectron2/: app_requirements.txt  experiments_requirements.txt  install.sh  ml_requirements.txt  player_tracking_requirements.txt  pre_ml_requirements.txt  system_requirements.txt  video_requirements.txt
scripts/optimize/: export.py  results.txt  test_inference_speed.py
scripts/optimize/models/int8/: class_accuracy.txt
src/: VideMAE_inference.py  api_init_data.py  app.py  demo.py  full_pipeline.py  inference-bbox.py  main.py  rallies_annotation.py  splice.py  train-bbox.py  video_clipping.py  yolo_inference.py  yolo_rallies_inference.py
src/backend/app/: api_interface.py  api_worker.py  app.py
src/backend/app/api/: api.py  deps.py
src/backend/app/core/: config.py
src/backend/app/crud/: base.py  crud_item.py  (+1 more)
src/gui/: court_annotation.py  court_manual_annotation.py
src/ml/abstract/: yolo_detector.py
src/ml/action_detection/: yolo_action_detector.py
src/ml/ball_detection/: yolo_ball_detector.py
src/ml/event_detection/: video_mae_train.py
src/ml/keypoint_detection/: yolo_pose_estimator.py
src/ml/yolo/: __init__.py  train-bbox.py  train-seg.py  volleyball_object_detector.py  yolo_inference.py
src/utilities/: utils.py
src/utilities/annotation-tools/: rectangle.py  rectangle2.py  tracknet_labeler.py
src/utilities/youtube/: download.py
src/yolov8/: inference-bbox.py  inference-seg.py  train-bbox.py  train-seg.py
utilities/: rectangle.py  rename_screenshots.ipynb  tracknet_labeler.py
weights/: description.txt
(+56 files in other folders)
