[project]
name = "volleyball-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "albumentations>=2.0.7",
    "cvat-sdk>=2.37.0",
    "dataclasses-json>=0.6.7",
    "dill>=0.4.0",
    "fastapi>=0.115.12",
    "gdown>=5.2.0",
    "imageio>=2.37.0",
    "ipywidgets>=8.1.7",
    "loguru>=0.7.3",
    "natsort>=8.4.0",
    "norfair>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "pendulum>=3.1.0",
    "pika>=1.3.2",
    "psycopg2>=2.9.10",
    "pycocotools>=2.0.8",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pytorchvideo>=0.1.3",
    "pyyaml>=6.0.2",
    "ruff>=0.11.11",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.43",
    "supervision>=0.26.1",
    "torch==2.3.*",
    "torchaudio==2.3.*",
    "torchvision==0.18.*",
    "tqdm>=4.67.1",
    "transformers>=4.52.3",
    "ultralytics>=8.3.144",
    "uvicorn>=0.34.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
